--- a/compositor/Makefile
+++ b/compositor/Makefile
@@ -1,11 +1,14 @@
 CC=gcc
 CFLAGS=-std=c11 -Wall -Wextra -Werror -pedantic-errors -Wno-unused
 INCLUDE=-I/usr/include/libdrm
-LIBS=-ldrm -lwayland-server
+LIBS=-lm -ldrm -lgbm -lEGL -lGLESv2 -lwayland-server
 
-main: compositor.o output.o region.o surface.o xdg_shell.o \
-protocols/xdg-shell-unstable-v6-code.o main.o
+main: algebra.o compositor.o output.o region.o surface.o xdg_shell.o \
+protocols/xdg-shell-unstable-v6-code.o renderer.o main.o
 	${CC} ${LIBS} -o $@ $^
+
+algebra.o: algebra.c algebra.h
+	${CC} ${CFLAGS} -c -o $@ $<
 
 compositor.o: compositor.c compositor.h surface.h region.h
 	${CC} ${CFLAGS} -c -o $@ $<
@@ -16,14 +19,17 @@ output.o: output.c output.h
 region.o: region.c region.h
 	${CC} ${CFLAGS} -c -o $@ $<
 
-surface.o: surface.c surface.h
+surface.o: surface.c surface.h renderer.h
 	${CC} ${CFLAGS} -c -o $@ $<
 
 xdg_shell.o: xdg_shell.c xdg_shell.h \
 protocols/xdg-shell-unstable-v6-server-protocol.h
 	${CC} ${CFLAGS} -c -o $@ $<
 
-main.o: main.c compositor.h output.h surface.h xdg_shell.h
+renderer.o: renderer.c
+	${CC} ${CFLAGS} -c -o $@ $<
+
+main.o: main.c algebra.h compositor.h output.h surface.h xdg_shell.h
 	${CC} ${CFLAGS} ${INCLUDE} -c -o $@ $<
 
 clean:
