Added wl_drm interface

--- a/compositor/Makefile
+++ b/compositor/Makefile
@@ -3,12 +3,20 @@ CFLAGS=-std=c11 -Wall -Wextra -Werror -pedantic-errors -Wno-unused
 INCLUDE=-I/usr/include/libdrm
 LIBS=-lm -ldrm -lgbm -lEGL -lGLESv2 -lwayland-server
 
-main: algebra.o compositor.o output.o region.o surface.o xdg_shell.o \
-protocols/xdg-shell-unstable-v6-code.o renderer.o main.o
+main: algebra.o egl.o renderer.o compositor.o output.o region.o surface.o \
+xdg_shell.o protocols/xdg-shell-unstable-v6-code.o main.o
 	${CC} ${LIBS} -o $@ $^
 
 algebra.o: algebra.c algebra.h
 	${CC} ${CFLAGS} -c -o $@ $<
+
+egl.o: egl.c egl.h 
+	${CC} ${CFLAGS} -c -o $@ $<
+
+renderer.o: renderer.c renderer.h algebra.h egl.h
+	${CC} ${CFLAGS} -c -o $@ $<
+
+# --- WAYLAND INTERFACES ---
 
 compositor.o: compositor.c compositor.h surface.h region.h
 	${CC} ${CFLAGS} -c -o $@ $<
@@ -19,17 +27,17 @@ output.o: output.c output.h
 region.o: region.c region.h
 	${CC} ${CFLAGS} -c -o $@ $<
 
-surface.o: surface.c surface.h renderer.h
+surface.o: surface.c surface.h egl.h renderer.h
 	${CC} ${CFLAGS} -c -o $@ $<
 
 xdg_shell.o: xdg_shell.c xdg_shell.h \
 protocols/xdg-shell-unstable-v6-server-protocol.h
 	${CC} ${CFLAGS} -c -o $@ $<
 
-renderer.o: renderer.c
-	${CC} ${CFLAGS} -c -o $@ $<
+# --- MAIN ---
 
-main.o: main.c algebra.h compositor.h output.h surface.h xdg_shell.h
+main.o: main.c algebra.h egl.h renderer.h compositor.h output.h surface.h \
+xdg_shell.h
 	${CC} ${CFLAGS} ${INCLUDE} -c -o $@ $<
 
 clean:
