Basic keyboard "works"

--- a/compositor/Makefile
+++ b/compositor/Makefile
@@ -1,10 +1,10 @@
 CC=gcc
 CFLAGS=-std=c11 -Wall -Wextra -Werror -pedantic-errors -Wno-unused
 INCLUDE=-I/usr/include/libdrm
-LIBS=-lm -ldrm -lgbm -lEGL -lGLESv2 -lwayland-server
+LIBS=-lm -ldrm -lgbm -lEGL -lGLESv2 -lwayland-server -lxkbcommon
 
-main: algebra.o egl.o renderer.o compositor.o output.o region.o surface.o \
-xdg_shell.o protocols/xdg-shell-unstable-v6-code.o main.o
+main: algebra.o egl.o renderer.o compositor.o keyboard.o output.o region.o \
+seat.o surface.o xdg_shell.o protocols/xdg-shell-unstable-v6-code.o main.o
 	${CC} ${LIBS} -o $@ $^
 
 algebra.o: algebra.c algebra.h
@@ -21,10 +21,16 @@ renderer.o: renderer.c renderer.h algebra.h egl.h
 compositor.o: compositor.c compositor.h surface.h region.h
 	${CC} ${CFLAGS} -c -o $@ $<
 
+keyboard.o: keyboard.c
+	${CC} ${CFLAGS} -c -o $@ $<
+
 output.o: output.c output.h
 	${CC} ${CFLAGS} -c -o $@ $<
 
 region.o: region.c region.h
+	${CC} ${CFLAGS} -c -o $@ $<
+
+seat.o: seat.c seat.h keyboard.h
 	${CC} ${CFLAGS} -c -o $@ $<
 
 surface.o: surface.c surface.h egl.h renderer.h
@@ -36,8 +42,8 @@ protocols/xdg-shell-unstable-v6-server-protocol.h
 
 # --- MAIN ---
 
-main.o: main.c algebra.h egl.h renderer.h compositor.h output.h surface.h \
-xdg_shell.h
+main.o: main.c algebra.h egl.h renderer.h compositor.h output.h seat.h \
+surface.h xdg_shell.h
 	${CC} ${CFLAGS} ${INCLUDE} -c -o $@ $<
 
 clean:
