--- a/compositor/meson.build
+++ b/compositor/meson.build
@@ -1,17 +1,19 @@
-project('drm-input-wayland', 'c', default_options : 'c_std=c11')
-add_project_arguments('-Wall', '-Wextra', '-Wno-unused', language : 'c')
+project('compositor', 'c', default_options : 'c_std=c11')
+add_project_arguments('-Wall', '-Wextra', '-Wno-unused-parameter', language : 'c')
 add_project_link_arguments('-lm', language : 'c')
 
 b = 'backend/'
 p = 'protocols/'
+u = 'util/'
 w = 'wl/'
 x = 'xdg/'
 
-src = [b+'algebra.c', b+'egl.c', b+'renderer.c']
+src = [b+'egl.c', b+'screen.c']
 src += p+'xdg-shell-unstable-v6-code.c'
+src += u+'algebra.c'
 src += [w+'compositor.c', w+'keyboard.c', w+'output.c', w+'region.c', w+'seat.c', w+'surface.c']
 src += x+'xdg_shell.c'
-src += 'main.c'
+src += ['main.c', 'renderer.c']
 
 inc = include_directories('include')
 
